# B3-21

./: CMakeLists.txt  README.md  main.cpp
backend/: main-backend-test.cpp
backend/backup/: backup.cpp  backup.hpp
backend/calc_exec/: calc_exec.cpp  calc_exec.hpp  calc_math.cpp  calc_math.hpp  calc_operations.cpp
backend/for_society/: for_society.cpp  for_society.hpp
backend/message_queue/: message_queue.cpp  message_queue.hpp
backend/number/: number.cpp  number.hpp
backend/number_buffer/: number_buffer.cpp  number_buffer.hpp
backend/program_buffer_exec/: program.cpp  program.hpp
frontend/interface/definition/: interface_def.cpp  interface_def.hpp
frontend/interface/frame/: connection.cpp  frame.cpp  frame.hpp
frontend/visualization/: updater.cpp  updater.hpp  visualization.hpp  visualization_class.cpp
